2002-01-29  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02921] use inttypes.h instead of stdint.h
	* configure: check inttypes.h instead of stdint.h
	* config.h.dist: s/STDINT_H/INTTYPES_H/
	* mktable.c: use inttypes.h instead of stdint.h

2002-01-28  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02919] no need of width
	* scripts/w3mmail.cgi.in: no need width=80 for header field name

2002-01-28  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02919] wrong table width calculation
	* table.c (set_table_matrix0): refine width calculation

2002-01-28  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02918] fixed scripts/w3mmail.cgi.in
	* scripts/w3mmail.cgi.in: add width=80 for header field name
	* scripts/w3mmail.cgi.in (url_unquote): use pack instead of chr

2002-01-27  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02914]
	* history.c (copyHist): added
	* history.h (copyHist): ditto
	* main.c (goURL0): copyHist(URLHist), push current and anchor URLs
		default set by DefaultURLString

2002-01-26  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02913] wrong table width calculation
	* table.c (set_table_matrix0): refine width calculation

2002-01-26  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02875] rendering a table with inconsistent colspan,rowspan
	* table.c (feed_table_tag): don't clear HTT_X|HTT_Y 
		instead, if set these flags, break the loop

2002-01-26  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02909] wrong table width calculation (sf.net Bug#506949)
	* table.c (correct_table_matrix4): added
	* table.c (set_table_matrix0): use correct_table_matrix4()

2002-01-25  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02908] document code of frame
	* frame.c (renderFrame): save document_code if JP_CHARSET

2002-01-25  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02904]
	* rc.c (N_STR): use cpp stringification

2002-01-25  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
